# plugins

./: .gitignore  LICENSE  README.md  build.sh  create_installer.sh  entitlements.plist  installer.iss
.github/workflows/: build-release.yml  build-release_pitchflattener.yml  build-release_ptsl-beattool.yml  build-release_reversinator.yml  build-release_stretcharmstrong.yml  build-release_subbertone.yml
PTSL_beattool/: .gitignore  CMakeLists.txt  README.md  build_release.sh  bundle_python_framework.sh  bundle_pytsl.sh  requirements.txt
PTSL_beattool/Resources/: Info.plist.in
PTSL_beattool/Source/: AudioFileReader.cpp  AudioFileReader.h  BeatDetector.cpp  BeatDetector.h  BeatTracker.cpp  BeatTracker.h  OpenGLView.h  OpenGLView.mm  PyPTSL.cpp  PyPTSL.h  ScalableView.h  ScalableView.mm  WaveformVisualizer.cpp  WaveformVisualizer.h  gui_native.mm  main.cpp  ptsl-beat-cli
PTSL_beattool/Source/python/: ptsl_client.py  setup_paths.py
PTSL_beattool/Source/python/grpc/_cython/: __init__.py
PTSL_beattool/Source/python/grpcio-1.73.0.dist-info/: RECORD
PTSL_beattool/Source/python/protobuf-5.26.1.dist-info/: RECORD
pitchflattener/: CMakeLists.txt  README.md  create_release.sh  installer.iss
pitchflattener/.github/workflows/: build.yml
pitchflattener/Source/: FFTVisualizer.cpp  FFTVisualizer.h  PitchDetector.cpp  PitchDetector.h  PitchFlattenerEngine.cpp  PitchFlattenerEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  SpectrogramVisualizer.cpp  SpectrogramVisualizer.h
reversinator/: CMakeLists.txt  LICENSE  README.md  installer.iss
reversinator/Source/: CustomFonts.cpp  CustomFonts.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ReverseEngine.cpp  ReverseEngine.h
stretcharmstrong/: CMakeLists.txt  LICENSE  entitlements.plist  installer.iss
stretcharmstrong/Source/: AboutWindow.cpp  AboutWindow.h  PitchDetector.cpp  PitchDetector.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  StretchEngine.cpp  StretchEngine.h  WaveformVisualizer.cpp  WaveformVisualizer.h
subbertone/: CMakeLists.txt  LICENSE  README.md  entitlements.plist  installer.iss
subbertone/Source/: AboutWindow.cpp  AboutWindow.h  FundamentalDetector.cpp  FundamentalDetector.h  PitchDetector.cpp  PitchDetector.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SimpleWaveformVisualizer.cpp  SimpleWaveformVisualizer.h  SubharmonicEngine.cpp  SubharmonicEngine.h  WaveformVisualizer.cpp  WaveformVisualizer.h
